2007-03-27  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): If we aren't
	in a UTF-8 locale, convert status messages into UTF-8 when using
	the status line in the GError.

2007-03-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (g_mime_utils_8bit_header_decode)
	(g_mime_utils_8bit_header_encode)
	(g_mime_utils_8bit_header_encode_phrase): Changed all of these
	functions to take `const unsigned char *' like they used to. Fixes
	bug #423147.

	* gmime/gmime-gpg-context.c (gpg_ctx_new): Initialize flushed and
	nodata state variables. Thanks to valgrind for finding these...

	* gmime/gmime-content-type.c
	(g_mime_content_type_new_from_string): Shouldn't need to
	g_strstrip() the type, is_ttoken() won't match against lwsp
	chars. Also, instead of simply scanning past lwsp between some
	tokens, use decode_lwsp() between *all* tokens so that we handle
	comments as well (not that there should be any...).

	* gmime-2.0.pc.in: Got rid of the redundant @LIBS@ which contained
	the same value as @GMIME_LIBS@.

	* configure.in: Added configure checks for large file support.

2007-03-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime-param.c: #include "gmime-parse-utils.h" and got rid of
	this file's own decode_lwsp() implementation.

	* internet-address.c: #include "gmime-parse-utils.h" which is
	where a bunch of the parser functions have been moved from here.

	* gmime-utils.c: #include "gmime-parse-utils.h" for decode_lwsp()
	and decode_domain()
	(decode_addrspec): Moved here from internet-address.c which had
	been exporting the symbol previously (so that decode_domain didn't
	have to be copy/pasted). Now this function can be made static -
	yay! No more exporting un-namespaced symbols!

	* gmime/gmime-message.c: #include "gmime-parse-utils.h" for
	decode_lwsp()

	* gmime/gmime-parse-utils.[c,h]: New source files containing some
	parse utility functions that had been copy/pasted between several
	source files previously.
